--- a/index.html
+++ b/index.html
@@ -5,47 +5,24 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h1>Duraznos Amanecer Bombillo X 250 Gr</h1>
+	<h1>Tabla Nutricional Duraznos La Pradera Bombillo X 250 Gr</h1>
 	<nav>
 		<ul>
-			<li><a href="">Haz Clic Aqui</a></li>
-			<li><a href="">Haz Clic Aqui</a></li>
-			<li><a href="">Haz Clic Aqui</a></li>
-			<li><a href="">Haz Clic Aqui</a></li>
+			<li><a href="">Aqui encontrarás la información nutricional del producto:</a></li>
 		</ul>
 	</nav>
 	<div class="contenido">
 		<div class="Articulo">
-			<div class="Secciones">
-				<div>
-					<h2>Subtitulos</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<div><img src="assets/tabla_durazno_250gr.png">
 				</div>
-				<div><img src="assets/durazno.jpg">
+				<div><img src="assets/azucares.png">
 				</div>
 			</div>
 		</div>
-		<div class="Menu-Secundario">
-			<a href="">Mas Articulos</a>
-			<a href="">Mas Articulos</a>
-			<a href="">Mas Articulos</a>
-			<a href="">Mas Articulos</a>
-			<a href="">Mas Articulos</a>
-		</div>
 	</div>
-
 	<footer>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>FABRICADO POR: Inversiones La Pradera S.A.S Av. 7 N° 6-23 Via Panamericana Zona Industrial-Cúcuta Norte de Santander</p>
+		<p>Teléfono: +57 320 343 3760</p>
 	</footer>
 
 
